--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,26 +1,37 @@
 <div class="container pt-3 mb-3">
-  <div class="my-4 d-flex row align-items-center">
-    <div class="col-5">
-      <div class="d-flex gap-2 align-items-center">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="UniProt identifier" [(ngModel)]="uniProtId" (keydown.enter)="searchUniProt()">
-          <button type="reset" (click)="uniProtId = ''; searchUniProt()" class="btn btn-outline-warning">
-            <i class="bi bi-x-lg"></i>
-          </button>
-          <button type="submit" (click)="searchUniProt()" class="btn btn-outline-primary" style="min-width: 95px">
-            Search
-            <i class="bi bi-search"></i>
-          </button>
-        </div>
-        <span class="badge" [ngClass]="totalItems$.value == 0 ? 'bg-danger' : 'bg-success'">
+  <div class="my-4 row align-items-center gap-2 justify-content-end">
+    <div class="col">
+      <div class="input-group" style="min-width: 287px">
+        <input (keydown.enter)="searchUniProt()" [(ngModel)]="uniProtId" class="form-control" placeholder="UniProt identifier"
+               style="min-width: 130px"
+               type="text">
+        <button (click)="uniProtId = ''; searchUniProt()" class="btn btn-outline-warning" type="reset">
+          <i class="bi bi-x-lg"></i>
+        </button>
+        <button (click)="searchUniProt()" class="btn btn-outline-primary" style="min-width: 95px" type="submit">
+          Search
+          <i class="bi bi-search"></i>
+        </button>
+      </div>
+      <span [ngClass]="totalItems$.value == 0 ? 'bg-danger' : 'bg-success'" class="form-text badge">
           {{totalItems$.value == 1 ? totalItems$.value + ' entry' : totalItems$.value + ' entries'}}
         </span>
+    </div>
+    <div class="col align-self-start">
+      <div class="d-flex align-items-center justify-content-end">
+        <span class="me-2" style="min-width: fit-content">Endpoint</span>
+        <select (change)="onEndpointChange($event)" [ngClass]="rdfService.currentSource == 'GraphDB' ? 'graphdb' : 'virtuoso'" class="form-select"
+                id="test" style="max-width: 88px">
+          <option value="GraphDB">GraphDB</option>
+          <option value="Virtuoso">Virtuoso</option>
+          <!-- Add more options as needed -->
+        </select>
       </div>
     </div>
-    <div class="col-3 ms-auto">
+    <div class="col align-self-start pe-0">
       <div class="d-flex align-items-center justify-content-end">
-        <span class="me-2" style="min-width: fit-content">Items per page</span>
-        <select class="form-select" id="itemsPerPage" (change)="onItemsPerPageChange($event)" style="max-width: 70px">
+        <span class="me-2">Items </span>
+        <select (change)="onItemsPerPageChange($event)" class="form-select" style="max-width: 70px">
           <option value="5">5</option>
           <option value="10">10</option>
           <option value="15">15</option>
@@ -28,27 +39,26 @@
         </select>
       </div>
     </div>
-
-    <div class="col-auto">
+    <div class="col-auto align-self-start">
       <nav aria-label="Page navigation">
         <ul class="pagination justify-content-end mb-0">
 
-          <li class="page-item" [class.disabled]="currentPage === 1">
-            <a class="page-link" (click)="currentPage = 1">First</a>
+          <li [class.disabled]="currentPage === 1" class="page-item">
+            <a (click)="currentPage = 1" class="page-link">First</a>
           </li>
-          <li class="page-item" [class.disabled]="currentPage === 1">
-            <a class="page-link" (click)="currentPage = currentPage - 1" aria-label="Previous">
+          <li [class.disabled]="currentPage === 1" class="page-item">
+            <a (click)="currentPage = currentPage - 1" aria-label="Previous" class="page-link">
               <span aria-hidden="true">&laquo;</span>
             </a>
           </li>
-          <li class="page-item" *ngFor="let pageNumber of getPageNumbers()">
-            <a class="page-link" [class.active]="pageNumber === currentPage"
-               (click)="currentPage = pageNumber">
+          <li *ngFor="let pageNumber of getPageNumbers()" class="page-item">
+            <a (click)="currentPage = pageNumber" [class.active]="pageNumber === currentPage"
+               class="page-link">
               {{pageNumber}}
             </a>
           </li>
-          <li class="page-item" [class.disabled]="currentPage === totalPages()">
-            <a class="page-link" (click)="currentPage = currentPage + 1" aria-label="next">
+          <li [class.disabled]="currentPage === totalPages()" class="page-item">
+            <a (click)="currentPage = currentPage + 1" aria-label="next" class="page-link">
               <span aria-hidden="true">&raquo;</span>
             </a>
           </li>
@@ -56,30 +66,18 @@
       </nav>
     </div>
   </div>
-  <div class="d-flex flex-row gap-2">
-    <!--    <button type="button" class="btn btn-primary" (click)="searchRDFData()">-->
-    <!--      Search RDF Data-->
-    <!--    </button>-->
-    <!--    <button type="button" class="btn btn-primary" (click)="numberOfUniProtProteins()">-->
-    <!--      Number of UniProt proteins-->
-    <!--    </button>-->
-    <!--    <button type="button" class="btn btn-primary" (click)="proteinInGraph()">-->
-    <!--      Show if a protein is in a resource-->
-    <!--    </button>-->
-    <!--    <button type="button" class="btn btn-primary" (click)="createRegistry()">-->
-    <!--      Registry-->
-    <!--    </button>-->
-  </div>
 
   <ng-container *ngIf="pagination$ | async"></ng-container>
 
-  <div *ngIf="(rdfData$ | async) as rdfData; else loadingSpinner" class="d-flex gap-3 flex-column">
-    <ng-container *ngIf="rdfData.length > 0; else noData">
-      <ng-container *ngFor="let protein of rdfData">
-        <app-protein-row [protein]="protein"></app-protein-row>
+  <ng-container *ngIf="!(error$ |async); else inError">
+    <div *ngIf="(rdfData$ | async) as rdfData; else loadingSpinner" class="d-flex gap-3 flex-column">
+      <ng-container *ngIf="rdfData.length > 0; else noData">
+        <ng-container *ngFor="let protein of rdfData">
+          <app-protein-row [protein]="protein"></app-protein-row>
+        </ng-container>
       </ng-container>
-    </ng-container>
-  </div>
+    </div>
+  </ng-container>
 </div>
 
 
@@ -95,6 +93,15 @@
   <div class="d-flex mb-3 absolute-center">
     <div class="alert alert-primary" role="alert">
       No proteins found
+    </div>
+  </div>
+</ng-template>
+
+<ng-template #inError>
+  <div class="d-flex mb-3 absolute-center">
+    <div class="alert alert-primary col " role="alert">
+      <h5>Error while fetching data</h5>
+      <p>{{error$.value?.status}}: {{error$.value?.message}}</p>
     </div>
   </div>
 </ng-template>
