--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,8 @@
 /*
 Error: File to import not found or unreadable: bootstrap/scss/bootstrap.scss.
-        on line 10 of styles/_theme.scss
+        on line 12 of styles/_theme.scss
         from line 2 of styles.scss
 
-5:   width: 100%;
-6:   height: 100%;
 7: }
 8: 
 9: //body {
@@ -14,9 +12,11 @@ Error: File to import not found or unreadable: bootstrap/scss/bootstrap.scss.
 13: ::-webkit-scrollbar {
 14:   width: 10px;
 15: }
+16: 
+17: ::-webkit-scrollbar-track {
 
 Backtrace:
-styles/_theme.scss:10
+styles/_theme.scss:12
 styles.scss:2
 /usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:67:in `rescue in import'
 /usr/share/rubygems-integration/all/gems/sass-3.7.4/lib/sass/tree/import_node.rb:44:in `import'
@@ -68,4 +68,4 @@ styles.scss:2
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: File to import not found or unreadable: bootstrap/scss/bootstrap.scss.\A         on line 10 of styles/_theme.scss\A         from line 2 of styles.scss\A \A 5:   width: 100%;\A 6:   height: 100%;\A 7: }\A 8: \A 9: //body {\A 10: //  overflow-y: scroll;\A 11: //}\A 12: \A 13: ::-webkit-scrollbar {\A 14:   width: 10px;\A 15: }"; }
+  content: "Error: File to import not found or unreadable: bootstrap/scss/bootstrap.scss.\A         on line 12 of styles/_theme.scss\A         from line 2 of styles.scss\A \A 7: }\A 8: \A 9: //body {\A 10: //  overflow-y: scroll;\A 11: //}\A 12: \A 13: ::-webkit-scrollbar {\A 14:   width: 10px;\A 15: }\A 16: \A 17: ::-webkit-scrollbar-track {"; }
