Default route points to '' instead of /home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a aria-current="page" class="nav-link" data-bs-toggle="collapse"
-                 routerLink="/home">Home</a>
+                 routerLink="/">Home</a>
             </li>
             <li class="nav-item">
               <a aria-current="page" class="nav-link" data-bs-toggle="collapse"
